Added a git logo at the bottom + link to git profile

--- a/style.css
+++ b/style.css
@@ -50,3 +50,27 @@ body {
     background-color: #95BFDB;
     color: white;
 }
+
+footer{
+    font-size: 25px;
+    bottom: 0;
+    justify-content: center;
+    padding-top: 55px;
+    padding-bottom: 55px;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+#gh-logo{
+    width: 35px;
+    height: 35px;
+    margin-bottom: -9px;
+    margin-right: 10px;
+}
